--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "https://blog.jinreal.com/"
+languageCode = "zh-cn"
+title = "牛津的博客"
+theme = 'noteworthy-mod'
