--- a/config.toml
+++ b/config.toml
@@ -7,4 +7,4 @@ theme = 'noteworthy-mod'
     # Programming
     github = "https://github.com/jinreal/"
     weibo = "http://weibo.com/jinreal2014"
-    medium = "https://medium.com/@tech3e"
+    medium = "https://medium.com/@tetconst"
