--- a/config.toml
+++ b/config.toml
@@ -18,8 +18,8 @@ theme = 'noteworthy-mod'
 	url = "/tags/"
 	weight = 2
 
-# [[menu.main]]
-# 	identifier = "test"
-# 	name = "標籤"
-# 	url = "/tags/"
-# 	weight = 2
+[[menu.main]]
+	identifier = "test"
+	name = "標籤"
+	url = "/tags/小說/"
+	weight = 2
